# elevenlabs_tts

./: .gitignore  Cargo.toml  README.md
examples/: advanced_tts.rs  basic_tts.rs
src/: error.rs  lib.rs  models.rs  types.rs
tests/: integration_test.rs
